# indexstore-db

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE.txt  Package.swift  README.md
.github/: CODEOWNERS
Documentation/: Development.md  Tibs.md
Sources/: CMakeLists.txt
Sources/ISDBTestSupport/: ForwardingIndexDelegate.swift  SourceFileCache.swift  TestLocation.swift  TestLocationScanner.swift  TestSources.swift  TibsTestWorkspace.swift  XCTestAssertions.swift
Sources/ISDBTibs/: Data.swift  JSONCompilationDatabase.swift  Makefile.swift  OutputFileMap.swift  Process.swift  TibsBuilder.swift  TibsManifest.swift  TibsResolvedTarget.swift  TibsToolchain.swift
Sources/IndexStore/: Index Store.md  IndexStore.swift  IndexStoreDescription.swift  IndexStoreError.swift  IndexStoreLanguage.swift  IndexStoreLibrary.swift  IndexStoreOccurrence.swift  IndexStoreRecord.swift  IndexStoreSequence.swift  IndexStoreStringRef.swift  IndexStoreSymbol.swift  IndexStoreSymbolRelation.swift  IndexStoreSymbolRoles.swift  IndexStoreUnit.swift  IndexStoreUnitDependency.swift  IndexStoreUnitInclude.swift  IndexSymbolRoles.swift  README.md  dlopen.swift  indexstore_functions+init.swift
Sources/IndexStoreDB/: CMakeLists.txt  IndexDelegate.swift  IndexStoreDB.swift  IndexStoreDBError.swift  Symbol.swift  SymbolLocation.swift  SymbolOccurrence.swift  SymbolProperty.swift  SymbolRole.swift
Sources/IndexStoreDB_CIndexStoreDB/: CIndexStoreDB.cpp  CMakeLists.txt
Sources/IndexStoreDB_CIndexStoreDB/include/: module.modulemap
Sources/IndexStoreDB_CIndexStoreDB/include/IndexStoreDB_CIndexStoreDB/: CIndexStoreDB.h  CIndexStoreDB_Internal.h  indexstore_functions.h
Sources/IndexStoreDB_Core/: CMakeLists.txt  Symbol.cpp
Sources/IndexStoreDB_Database/: CMakeLists.txt  Database.cpp  DatabaseError.cpp  DatabaseImpl.h  ImportTransaction.cpp  ImportTransactionImpl.h  ReadTransaction.cpp  ReadTransactionImpl.h
Sources/IndexStoreDB_Database/include/IndexStoreDB_Database/: Database.h  DatabaseError.h  IDCode.h  ImportTransaction.h  ReadTransaction.h  UnitInfo.h
Sources/IndexStoreDB_Database/lmdb/: lmdb++.h
Sources/IndexStoreDB_Index/: CMakeLists.txt  FilePathIndex.cpp  FileVisibilityChecker.cpp  FileVisibilityChecker.h  IndexDatastore.cpp  IndexDatastore.h  IndexStoreLibraryProvider.cpp  IndexSystem.cpp  StoreSymbolRecord.cpp  StoreSymbolRecord.h  SymbolIndex.cpp  indexstore_functions.def
Sources/IndexStoreDB_Index/include/IndexStoreDB_Index/: FilePathIndex.h  IndexStoreCXX.h  IndexStoreLibraryProvider.h  IndexSystem.h  IndexSystemDelegate.h  StoreUnitInfo.h  SymbolDataProvider.h  SymbolIndex.h
Sources/IndexStoreDB_LLVMSupport/: AArch64TargetParser.cpp  APFloat.cpp  APInt.cpp  APSInt.cpp  ARMTargetParser.cpp  Allocator.cpp  Atomic.cpp  CMakeLists.txt  Chrono.cpp  CommandLine.cpp  ConvertUTF.cpp  ConvertUTFWrapper.cpp  DJB.cpp  Debug.cpp  Errno.cpp  Error.cpp  ErrorHandling.cpp  FileUtilities.cpp  FoldingSet.cpp  FormatVariadic.cpp  Hashing.cpp  Host.cpp  JSON.cpp  LineIterator.cpp  Locale.cpp  MD5.cpp  ManagedStatic.cpp  MathExtras.cpp  Memory.cpp  MemoryBuffer.cpp  Mutex.cpp  NativeFormatting.cpp  Optional.cpp  Options.cpp  Path.cpp  PrettyStackTrace.cpp  Process.cpp  Program.cpp  Signals.cpp  Signposts.cpp  (+24 more)
Sources/IndexStoreDB_LLVMSupport/Unix/: Host.inc  Memory.inc  Process.inc  Program.inc  Signals.inc  Threading.inc  Unix.h  Watchdog.inc
Sources/IndexStoreDB_LLVMSupport/Windows/: Memory.inc  Mutex.inc  Path.inc  Process.inc  Program.inc  Signals.inc  Threading.inc  WindowsSupport.h
Sources/IndexStoreDB_LLVMSupport/include/IndexStoreDB_LLVMSupport/: llvm-c_DataTypes.h  llvm-c_Error.h  llvm-c_ErrorHandling.h  llvm-c_Support.h  llvm-c_Types.h  llvm_ADT_APFloat.h  llvm_ADT_APInt.h  llvm_ADT_APSInt.h  llvm_ADT_AllocatorList.h  llvm_ADT_ArrayRef.h  llvm_ADT_DenseMap.h  llvm_ADT_DenseMapInfo.h  llvm_ADT_DenseSet.h  llvm_ADT_EpochTracker.h  llvm_ADT_FoldingSet.h  llvm_ADT_Hashing.h  llvm_ADT_IntrusiveRefCntPtr.h  llvm_ADT_None.h  llvm_ADT_OptionSet.h  llvm_ADT_Optional.h  llvm_ADT_PointerIntPair.h  llvm_ADT_PointerUnion.h  llvm_ADT_STLExtras.h  llvm_ADT_SetVector.h  llvm_ADT_SmallPtrSet.h  llvm_ADT_SmallSet.h  llvm_ADT_SmallString.h  llvm_ADT_SmallVector.h  llvm_ADT_Statistic.h  llvm_ADT_StringExtras.h  llvm_ADT_StringMap.h  llvm_ADT_StringRef.h  llvm_ADT_StringSet.h  llvm_ADT_StringSwitch.h  llvm_ADT_Triple.h  llvm_ADT_Twine.h  llvm_ADT_bit.h  llvm_ADT_edit_distance.h  llvm_ADT_ilist.h  llvm_ADT_ilist_base.h  (+90 more)
Sources/IndexStoreDB_Support/: CMakeLists.txt  Concurrency-Mac.cpp  FilePathWatcher.cpp  Logging-NonMac.cpp  Logging.cpp  Path.cpp  PatternMatching.cpp
Sources/IndexStoreDB_Support/include/IndexStoreDB_Support/: Concurrency.h  FilePathWatcher.h  LLVM.h  Logging.h  Path.h  PatternMatching.h
Sources/index-dump/: LibIndexStoreProvider.swift  index-dump.swift  main.swift
Sources/tibs/: main.swift
Tests/: LinuxMain.swift
Tests/ISDBTibsTests/: MiscTests.swift  (+6 more)
Utilities/: build-script-helper.py  import-llvm  llvm-patch.diff
lib/: CMakeLists.txt
lib/CIndexStoreDB/: CIndexStoreDB.cpp  CMakeLists.txt
lib/CIndexStoreDB/include/: CIndexStoreDB  indexstore
lib/Database/: CMakeLists.txt  Database.cpp  DatabaseError.cpp  DatabaseImpl.h  ImportTransaction.cpp  ImportTransactionImpl.h  ReadTransaction.cpp  ReadTransactionImpl.h
lib/Database/lmdb/: lmdb++.h  mdb.c
lib/Index/: CMakeLists.txt  FilePathIndex.cpp  FileVisibilityChecker.cpp  FileVisibilityChecker.h  IndexDatastore.cpp  IndexDatastore.h  IndexStoreLibraryProvider.cpp  IndexSystem.cpp  StoreSymbolRecord.cpp  StoreSymbolRecord.h  SymbolIndex.cpp  indexstore_functions.def
lib/LLVMSupport/: CMakeLists.txt
lib/LLVMSupport/Support/: AArch64TargetParser.cpp  CommandLine.cpp  ErrorHandling.cpp  Path.cpp  PrettyStackTrace.cpp  Statistic.cpp  Threading.cpp  Timer.cpp  Triple.cpp
lib/LLVMSupport/Support/Unix/: Process.inc  Signals.inc
lib/LLVMSupport/include/: llvm  llvm-c
lib/Support/: CMakeLists.txt  Concurrency-Mac.cpp  FilePathWatcher.cpp  Logging-Mac.mm  Logging.cpp  Logging_impl.h  Path.cpp  PatternMatching.cpp
(+118 files in other folders)
